feat(svg): add last seen info to svg cards with option to disable it
